Restructuration du code (classe Network) + ajout de protocoles (init, gameinfo)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,11 @@
 all:
 	javac $(shell find . -name \*.java)
 
-run: all
+runP1: all
 	java pong.Main
+
+runP2: all
+	java pong.Main 0:0:0:0:0:0:0:0 7777
 
 clean:
 	rm $(shell find . -name \*.class)
