Correction readIn PongClientSocket
Correction de la méthode readIn qui lisait auparavant caractère par caractère ce qui créait des erreurs lors de l'interpretation par la classe ProtocolHandler.
Pour remedier cela, on a ajouté un caractère de terminaison \n qui indique la fin d'une requête.

Ajout de la fonction disconnectInitConnexion qui permet de déconnecter le socket de connexion initial.

Correction de la boucle mainloop qui lit maintenant plusieurs requêtes dans un temps imparti (alors qu'avant elle en lisait une toutes les 10 ms, ce qui créait un décalage).

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,10 +2,16 @@ all:
 	javac $(shell find . -name \*.java)
 
 runP1: all
-	java pong.Main
+	java pong.Main 7777
 
 runP2: all
-	java pong.Main 0:0:0:0:0:0:0:0 7777
+	java pong.Main 7778 0:0:0:0:0:0:0:0 7777
+
+runP3: all
+	java pong.Main 7779 0:0:0:0:0:0:0:0 7778
+
+runP4: all
+	java pong.Main 7780 0:0:0:0:0:0:0:0 7777
 
 clean:
 	rm $(shell find . -name \*.class)
